Update and rename voice_cloner_finally.ipynb to voice_cloner.ipynb

--- a/voice_cloner.ipynb
+++ b/voice_cloner.ipynb
@@ -263,21 +263,21 @@
       "\n",
       "{| ████████████████ 19000/19200 | Batch Size: 2 | Gen Rate: 1.1kHz | }float64\n",
       "\n",
-      "Saved output as demo_output_1.wav\n",
+      "Saved output as demo_output_2.wav\n",
       "\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "preprocessed_wav = encoder.preprocess_wav(fpath_or_wav=\"output10.wav\")\n",
+    "preprocessed_wav = encoder.preprocess_wav(fpath_or_wav=\"input2.wav\")\n",
     "embed = encoder.embed_utterance(preprocessed_wav)\n",
-    "texts = [\"Hello\"]\n",
+    "texts = [\"What day is it today\"]\n",
     "embeds = [embed]\n",
     "specs = synthesizer.synthesize_spectrograms(texts, embeds)\n",
     "spec = specs[0]\n",
     "generated_wav = vocoder.infer_waveform(spec)\n",
-    "filename = \"demo_output_1.wav\"\n",
+    "filename = \"demo_output_2.wav\"\n",
     "print(generated_wav.dtype)\n",
     "sf.write(filename, generated_wav.astype(np.float32), synthesizer.sample_rate)\n",
     "print(\"\\nSaved output as %s\\n\\n\" % filename)"
